# parserpe-c-modern

./: .gitignore  CMakeLists.txt  README.md  arquivo.txt  shell.sh
cmd/: main.c
imports/: Dependencies.cmake
include/: VTableError.h  ast.h  cg.h  io.h  pch.h  pe_parser.h  sdk.h  sv.h
lexer/: token.h
src/: VTableError.c  io.c  pe_parser.c  sv.c  token.c
